scrollbar chop fixed

--- a/app/static/less/app/components/popoverlist.less
+++ b/app/static/less/app/components/popoverlist.less
@@ -82,7 +82,7 @@
 
 	.popover-header {
 		padding: 6px;
-		font-size: .9em;
+		font-size: .85em;
 		font-weight: bold;
 	}
 
@@ -103,7 +103,8 @@
 		// }
 
 		.msg-empty {
-			padding: 30px
+			padding: 30px;
+			font-size: 1.05em;
 		}
 	}
 
@@ -130,7 +131,7 @@
 				font-weight: normal;
 				font-style: normal;
 				float: right;
-				font-size: .9em;
+				font-size: .85em;
 				margin-top: 4px;
 				opacity: .8;
 			}
