--- a/app/static/less/app/components/sidebtns.less
+++ b/app/static/less/app/components/sidebtns.less
@@ -48,9 +48,9 @@
 
 		.transpBtn (@color: white) {
 			color: white;
-			&:hover {
-				color: @color;
-			}
+			// &:hover {
+			// 	color: @color;
+			// }
 			.label {
 				color: @color;
 			}
