--- a/app/static/less/app/pages/guides.less
+++ b/app/static/less/app/pages/guides.less
@@ -5,22 +5,6 @@
 @WidthSidebar: 280px;
 @WidthContent: 1020px;
 
-[data-page=guide]:not(.logged),
-[data-page=guides_index]:not(.logged) {
-	#navbar .navbar-content {
-		// max-width: @WidthContent;
-		// ul:not(.right) > &:last-child {
-		// 	margin-left: 0;
-		// }
-		// ul.right > &:last-child {
-		// 	margin-right: 0;
-		// }
-	}
-	// .container {
-	// 	max-width: (@WidthContent+20px);
-	// }
-}
-
 .contribute-btn {
 	// .xbtn(white, darken(mix(@CGREEN, yellow, 50%), 10%));
 	.xbtn(white, @CGREEN, lighten(@CGREEN, 5%));
